tests/suite/snapshots/suite__check__tests__check__bad_bin_op_2.xi.snap
---
source: tests/suite/check.rs
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_bin_op_2.xi:2:15]
   │
 2 │     i:int[] = {1} - {}
   ·               ─┬─  
   ·                ╰─── Expected int but found int[]
───╯

