tests/suite/snapshots/suite__check__tests__check__bad_class_cycle_3.xi.snap
---
source: tests/suite/check.rs
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_class_cycle_interface_1.ixi:3:1]
   │
 3 │ class A extends B {}
   · ──────────┬─────────  
   ·           ╰─────────── Class hierarchy for class A forms a cycle
───╯

